# fullstack_roadmap_agent

./: readme.md
backend/: main.py  pyproject.toml  railway.json
backend/agent/: agent_config.py  email_agent.py  objectives.py  resources.py  roadmap.py
backend/api/: main.py
backend/app/: main.py
backend/database/: connection.py
backend/models/: profile.py  roadmap.py  user.py
backend/utils/: api_response.py  helper_schemas.py  pdf_create.py  smtp_email.py
frontend/: frontend - Shortcut.lnk  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
frontend/src/components/: Agent.jsx  Agent.tsx  Loader.jsx  Mobile-form.tsx  Preview.jsx  Preview.tsx  Sidebar-form.tsx  barchart.jsx  barchart.tsx  generate_button.jsx  generate_button.tsx  pieChart.jsx  pieChart.tsx  send-email.jsx  send-email.tsx  tailwnind.config.js
frontend/src/components/ui/: chart.jsx  chart.tsx  dialog.tsx
